src/test/deca/context/invalid/created/Objet/InvalidCast.deca
// Description:
//  Teste d'un cast invalide
// Resultats:
//  InvalidCast.deca:8:17: Error: Cannot cast boolean to int


{
    int b = (int)(true);

}